--- a/.env
+++ b/.env
@@ -1,2 +1,16 @@
-APP-PASSWORD=hlib notr oqxf otel
-APP-NAME=php
+DB_HOST=localhost
+DB_DATABASE=Users
+DB_USERNAME=root
+DB_PASSWORD="SlLq$2714#"
+
+# Mail Settings for Gmail SMTP
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME="gabrielfhelixx@gmail.com"
+MAIL_PASSWORD="kjwtzwwzlguxusdl" 
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="gabrielfhelixx@gmail.com"
+MAIL_FROM_NAME="php"
+
+APP_URL=https://a3ea-160-19-247-77.ngrok-free.app
