vitor boroka vai assumir o resto

--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-DB_HOST=localhost
-DB_DATABASE=Users
-DB_USERNAME=root
-DB_PASSWORD="SlLq$2714#"
+DB_HOST=192.168.22.9
+DB_DATABASE=140p1
+DB_USERNAME=devweb
+DB_PASSWORD=voucher140
 
 # Mail Settings for Gmail SMTP
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME="gabrielfhelixx@gmail.com"
-MAIL_PASSWORD="kjwtzwwzlguxusdl" 
+MAIL_USERNAME="apolabusiness@gmail.com"
+MAIL_PASSWORD="hlibnotroqxfote" 
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="gabrielfhelixx@gmail.com"
-MAIL_FROM_NAME="php"
+MAIL_FROM_ADDRESS="apolabusiness@gmail.com"
+MAIL_FROM_NAME="apola"
 
 APP_URL=https://a3ea-160-19-247-77.ngrok-free.app
