branch 35 updation class

--- a/.env
+++ b/.env
@@ -8,9 +8,11 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME="apolabusiness@gmail.com"
-MAIL_PASSWORD="hlibnotroqxfote" 
+MAIL_PASSWORD="fqzpxdfxtzuqrohd" 
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="apolabusiness@gmail.com"
-MAIL_FROM_NAME="apola"
+MAIL_FROM_NAME="apolahub"
 
-APP_URL=https://a3ea-160-19-247-77.ngrok-free.app
+APP_URL=http://localhost:3000/PI
+
+    
