--- a/.env
+++ b/.env
@@ -13,6 +13,6 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="apolabusiness@gmail.com"
 MAIL_FROM_NAME="apolahub"
 
-APP_URL=http://localhost:3000/PI
+APP_URL=http://localhost:3000/PI//Pages/user
 
     
